WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159375
REGRESSION(
r189668
): Notification tests are flakey
https://bugs.webkit.org/show_bug.cgi?id=159375
Summary
REGRESSION(r189668): Notification tests are flakey
Myles C. Maxfield
Reported
2016-07-01 15:26:29 PDT
REGRESSION(
r189668
): Notification tests are flakey
Attachments
Patch
(19.23 KB, patch)
2016-07-01 15:39 PDT
,
Myles C. Maxfield
ap
: review+
ap
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(14.55 KB, patch)
2016-07-01 17:55 PDT
,
Myles C. Maxfield
mmaxfield
: review-
mmaxfield
: commit-queue-
Details
Formatted Diff
Diff
Patch for committing
(14.50 KB, patch)
2016-07-01 18:11 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch for committing
(14.51 KB, patch)
2016-07-01 18:30 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-07-01 15:39:25 PDT
Created
attachment 282595
[details]
Patch
Myles C. Maxfield
Comment 2
2016-07-01 15:39:44 PDT
***
Bug 159374
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3
2016-07-01 17:04:11 PDT
Are
bug 150736
and
bug 149218
same as this one?
Myles C. Maxfield
Comment 4
2016-07-01 17:06:04 PDT
(In reply to
comment #3
)
> Are
bug 150736
and
bug 149218
same as this one?
Yep.
Myles C. Maxfield
Comment 5
2016-07-01 17:09:07 PDT
***
Bug 150736
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 6
2016-07-01 17:13:48 PDT
Comment on
attachment 282595
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282595&action=review
> Source/WebKit2/ChangeLog:13 > + * UIProcess/API/C/WKNotificationManagerPrivate.h: Copied from Tools/WebKitTestRunner/WebNotificationProvider.h.
This should be WKNotificationManagerInternal.h, because it's only supposed to be used internally by WebKit tools, not as an SPI.
> Source/WebKit2/UIProcess/API/C/WKNotificationManagerPrivate.h:2 > + * Copyright (C) 2011 Apple Inc. All rights reserved.
2016
> Source/WebKit2/UIProcess/API/C/WKNotificationManagerPrivate.h:35 > +WK_EXPORT uint64_t WKNotificationManagerGetLocalID(WKNotificationManagerRef manager, WKNotificationRef notification);
May be good to have "ForTesting" in the name here too. Or just put into the regular WKNotificationManager.h with such a name - I'd ask Sam about what he prefers.
> Tools/ChangeLog:18 > + The solution is for WebNotificationProvider, imlemented in WebKitTestRunner in the UI Process, to
imPlemented
> LayoutTests/platform/mac/TestExpectations:-1261 > -
webkit.org/b/149218
http/tests/notifications/events.html [ Pass Crash ]
Was this the only test marked as a flaky crash? I expect that the other one from my comment should have been marked too.
> ChangeLog:9 > + * WebKit.xcworkspace/xcshareddata/xcschemes/All Source.xcscheme:
?
Myles C. Maxfield
Comment 7
2016-07-01 17:55:10 PDT
Created
attachment 282620
[details]
Patch for committing
Myles C. Maxfield
Comment 8
2016-07-01 18:11:19 PDT
Created
attachment 282623
[details]
Patch for committing
Myles C. Maxfield
Comment 9
2016-07-01 18:30:42 PDT
Created
attachment 282624
[details]
Patch for committing
WebKit Commit Bot
Comment 10
2016-07-01 19:53:39 PDT
Comment on
attachment 282624
[details]
Patch for committing Clearing flags on attachment: 282624 Committed
r202772
: <
http://trac.webkit.org/changeset/202772
>
David Kilzer (:ddkilzer)
Comment 11
2016-07-05 23:41:07 PDT
<
rdar://problem/22760990
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug