Tools/WebKitTestRunner/WebNotificationProvider.h
@@ -46,13 +46,15 @@ public:
     void removeNotificationManager(WKNotificationManagerRef);
     WKDictionaryRef notificationPermissions();
 
-    void simulateWebNotificationClick(uint64_t notificationID);
+    void simulateWebNotificationClick(WKPageRef, uint64_t notificationID);
     void reset();
 
 private:
     // Inverses of each other.
     HashMap<WKRetainPtr<WKNotificationManagerRef>, HashSet<uint64_t>> m_ownedNotifications;
     HashMap<uint64_t, WKNotificationManagerRef> m_owningManager;
+
+    HashMap<std::pair<WKPageRef, uint64_t>, uint64_t> m_localToGlobalNotificationIDMap;
 };
 
 }
